[gd_scene load_steps=16 format=2]

[ext_resource path="res://textures/ui/side1.png" type="Texture" id=1]
[ext_resource path="res://scripts/ui/Menu.gd" type="Script" id=2]
[ext_resource path="res://objects/ui/Settings.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/ui/Exit.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/main.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://textures/map/NewFloor.png" type="Texture" id=7]
[ext_resource path="res://scripts/vanity/MainMenuVanity.gd" type="Script" id=8]
[ext_resource path="res://textures/vanity/Vignette.png" type="Texture" id=9]
[ext_resource path="res://sound/music/mainmenu.mp3" type="AudioStream" id=10]
[ext_resource path="res://objects/ui/Play.tscn" type="PackedScene" id=11]
[ext_resource path="res://objects/ui/SettingsUI.tscn" type="PackedScene" id=12]

[sub_resource type="Theme" id=6]

[sub_resource type="DynamicFont" id=7]
size = 8
outline_size = 2
outline_color = Color( 0, 0, 0, 0.392157 )
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StreamTexture" id=8]

[node name="MainMenu" type="Node2D"]
position = Vector2( 1558, 785 )
script = ExtResource( 8 )

[node name="Menu" type="CanvasLayer" parent="."]
script = ExtResource( 2 )

[node name="Vignette" type="TextureRect" parent="Menu"]
modulate = Color( 1, 1, 1, 0.156863 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
expand = true

[node name="Buttons" type="VBoxContainer" parent="Menu"]
anchor_top = 0.942
anchor_bottom = 1.0
margin_left = 33.0
margin_top = -156.0
margin_right = 190.0
margin_bottom = -13.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Play" parent="Menu/Buttons" instance=ExtResource( 11 )]

[node name="Settings" parent="Menu/Buttons" instance=ExtResource( 3 )]

[node name="Exit" parent="Menu/Buttons" instance=ExtResource( 4 )]

[node name="Logo" type="TextureRect" parent="Menu"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -296.0
margin_top = -112.0
margin_right = 3544.0
margin_bottom = 1346.0
rect_scale = Vector2( 0.075, 0.075 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CreditText" type="Label" parent="Menu"]
anchor_left = 0.972
anchor_top = 0.009
anchor_right = 1.0
anchor_bottom = 0.064
margin_left = -287.0
margin_right = -4.0
margin_bottom = 34.0
theme = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "CREATED BY TAMAYAREN AND ALUPIT"
align = 2

[node name="VersionText" type="Label" parent="Menu"]
margin_left = 12.0
margin_top = 4.0
margin_right = 52.0
margin_bottom = 18.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Settings" parent="Menu" instance=ExtResource( 12 )]
visible = false

[node name="Credits" type="Panel" parent="Menu"]
visible = false
light_mask = 3
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="LOGO" type="TextureRect" parent="Menu/Credits"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -48.0
margin_right = 48.0
margin_bottom = 48.0
texture = SubResource( 8 )
expand = true

[node name="Tween" type="Tween" parent="Menu/Credits"]

[node name="Floor" type="Sprite" parent="."]
modulate = Color( 0.596078, 0.596078, 0.596078, 1 )
position = Vector2( -1142, 24 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 0, 0, 100000, 100000 )

[node name="Top" type="Position2D" parent="."]
position = Vector2( -1558, -785 )

[node name="Bottom" type="Position2D" parent="."]
position = Vector2( -278, -65 )

[node name="BackgroundAmbience" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -14.0
bus = "Music"

[connection signal="tween_all_completed" from="Menu/Credits/Tween" to="Menu" method="_on_Tween_tween_all_completed"]
